# SPA

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
recovery-prototype/: Cargo.toml  README.md  SECURITY.md
recovery-prototype/apps/cli/: Cargo.toml
recovery-prototype/apps/cli/examples/: se_probe.rs
recovery-prototype/apps/cli/src/: commands.rs  main.rs  persistence.rs
recovery-prototype/apps/cli/tests/: e2e_lifecycle.rs
recovery-prototype/crates/frost-tier0/: Cargo.toml
recovery-prototype/crates/frost-tier0/src/: dkg.rs  lib.rs  sign.rs
recovery-prototype/crates/frost-tier0/tests/: happy_path.rs  threshold_property.rs
recovery-prototype/crates/recovery-orchestrator/: Cargo.toml
recovery-prototype/crates/recovery-orchestrator/src/: clock.rs  lib.rs  state_machine.rs
recovery-prototype/crates/recovery-orchestrator/tests/: cooldown_cancellation.rs  state_transitions.rs
recovery-prototype/crates/slf-receipts/: Cargo.toml
recovery-prototype/crates/slf-receipts/src/: chain.rs  lib.rs  schema.rs
recovery-prototype/crates/slf-receipts/tests/: chain_verify.rs  signed_chain.rs
recovery-prototype/docs/: final-evaluation-report.md
recovery-prototype/docs/design-decisions/: ADR-001-frost-ciphersuite.md  ADR-002-share-storage-model.md  ADR-003-state-machine-shape.md  ADR-004-phase2-key-custody.md
recovery-prototype/tests/: fuzz_lifecycle.rs  key_never_reconstructed.rs  receipt_chain_replay.rs  recovery_from_each_pair.rs
