[package]
name = "spa-workspace-tests"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Workspace-level E2E integration tests for SPA recovery — Phase 1."
publish = false

[lints]
workspace = true

[dev-dependencies]
frost-tier0 = { path = "crates/frost-tier0" }
slf-receipts = { path = "crates/slf-receipts" }
recovery-orchestrator = { path = "crates/recovery-orchestrator" }
rand_core = { version = "0.6", features = ["getrandom"] }
rand_chacha = "0.3"
serde_json = "1"
zeroize = "1.8"
